--- a/themes/ictunion/layouts/index.html.html
+++ b/themes/ictunion/layouts/index.html.html
@@ -7,11 +7,11 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
-    {{ $options := (dict "transpiler" "dartsass") }}
+    {{ $sass_options := (dict "transpiler" "dartsass") }}
     {{ $sass := resources.Get "scss/main.scss" }}
-    {{ $style := $sass | resources.ToCSS $options }}
+    {{ $style := $sass | resources.ToCSS $sass_options }}
 
     <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
 
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="page-header">
-        <a class="site-title" href="#"><strong>{{ .Param "title" }}</strong> {{ .Param "sub_title" }}</a>
+        <a class="site-title" href="#"><strong>{{ .Param "title" }} </strong>{{ .Param "sub_title" }}</a>
         <nav class="page-nav">
           <ul class="page-nav-ul">
             <li>
@@ -67,19 +67,19 @@
         <main class="page-body">
             <h2 class="section-title-next">How to participate?</h2>
             <div class="coll-container">
-                <div class="homepage-item">
+                <div class="next-section-item">
                     <h3 class="participate-title">Attend Event</h3>
                     <p class="participate-pharagraph">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                 </div>
-                <div class="homepage-item">
+                <div class="next-section-item">
                     <h3 class="participate-title">Come & Meet Us</h3>
                     <p class="participate-pharagraph">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     </p>
                 </div>
-                <div class="homepage-item">
+                <div class="next-section-item">
                     <h3 class="participate-title">Join the Union</h3>
                     <p class="participate-pharagraph">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -91,20 +91,20 @@
       <section class="third-section">
         <main class="page-body">
             <h2 class="section-title">Membership Means...</h2>
-            <p class="section-description">
+            <p class="third-section-description">
               You'll become member of community of professionals and activists driven to achieve <a href="#">common goals</a> and betterment of conditions in our industry as well as society at large.
               <a href="#">Joining the union</a> will provide you with <strong>support structure whether you strive for betterment of work conditions or campaign for social change</strong>.
             </p>
             <div class="coll-container">
-                <div class="homepage-item">
+                <div class="third-section-item">
                     <h3 class="join-title">Attend Event</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
-                <div class="homepage-item">
+                <div class="third-section-item">
                     <h3 class="join-title">Come & Meet Us</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
-                <div class="homepage-item">
+                <div class="third-section-item">
                     <h3 class="join-title">Join the Union</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
@@ -114,7 +114,7 @@
       <section class="forth-section">
         <main class="page-body">
             <h2 class="forth-section-title">Upcoming Events:</h2>
-            <p class="section-description">Even as a non-member you can come and join some of our events. <strong>Participation isn't condition by a membership</strong> and who know? Maybe you'll consider
+            <p class="forth-section-description">Even as a non-member you can come and join some of our events. <strong>Participation isn't condition by a membership</strong> and who know? Maybe you'll consider
                 <a href="#">becoming member</a> eventually!
             </p>
             <div class="event-item">
