--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -476,4 +476,10 @@ body, html {
         line-height: 2em;
         padding: 12px 0 12px 52px;
     }
+
+    ol {
+        list-style-type: lower-alpha;
+        line-height: 2em;
+        padding: 12px 0 12px 18px;
+    }
 }
