--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,7 +12,7 @@
         <a href="{{ ref . "about" }}">{{ .Param "navigation.aboutUs" }}</a>
       </li>
       <li>
-        <a href="#">{{ .Param "navigation.statutes" }}</a>
+        <a href="{{ ref . "statutes" }}">{{ .Param "navigation.statutes" }}</a>
       </li>
       <li>
         <a href="#">{{ .Param "navigation.register" }}</a>
