--- a/layouts/register/single.html
+++ b/layouts/register/single.html
@@ -7,11 +7,11 @@
     <div class="page-body single-page">
       <h1 class="single-page-title">{{ .Title }}</h1>
       <div class="single-page-description">
-        {{ .Param "description" | markdownify }}
+        {{ .Content }}
       </div>
     </div>
   </section>
   <main class="page-body single-page-body">
-    {{ .Content }}
+    Add form here
   </main>
 {{ end }}
