--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
         <a href="{{ ref . "statutes" }}">{{ .Param "navigation.statutes" }}</a>
       </li>
       <li>
-        <a href="#">{{ .Param "navigation.register" }}</a>
+        <a href="{{ ref . "register" }}">{{ .Param "navigation.register" }}</a>
       </li>
       <li>
         <a href="#">{{ .Param "navigation.events" }}</a>
