--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,7 +14,7 @@
             <a href="{{ ref . "statutes" }}">{{ .Param "navigation.statutes" }}</a>
           </li>
           <li>
-            <a href="#">{{ .Param "navigation.register" }}</a>
+            <a href="{{ ref . "register" }}">{{ .Param "navigation.register" }}</a>
           </li>
           <li>
             <a href="#">{{ .Param "navigation.events" }}</a>
