--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -1,5 +1,5 @@
 <section class="home-header">
-  <main class="page-body">
+  <div class="home-header-content">
     <div class="home-header-tag">
       <h1 class="home-header-headline">
         <strong>{{ .Param "title" }}</strong> <small>{{ .Param "subTitle" }}</small>
@@ -14,5 +14,5 @@
         <a href="{{ ref . "register" }}">{{ i18n "become member" }}</a> {{ i18n "or join some of our" }} <a href="#">{{ i18n "events" }}</a>.
       </p>
     </div>
-  </main>
+  </div>
 </section>
