--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -70,6 +70,13 @@ $ternary-color: #43C5FF;
     }
 }
 
+@mixin page-body {
+    width: 100%;
+    max-width: 1152px;
+    margin: 0 auto;
+    padding: 0 24px;
+}
+
 body, html {
     font-family: $main-font;
     height: 100%;
@@ -78,10 +85,21 @@ body, html {
     font-size: 18px;
 }
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+/** To fix footer at the bottom of the page
+    which is something most pages donesn't do
+    we flex display body and flex-end the footer
+*/
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 .page-body {
-    max-width: 1152px;
-    margin: 0 auto;
-    padding: 0 24px;
+    @include page-body;
 }
 
 .site-header {
@@ -94,15 +112,6 @@ body, html {
     @include tablet {
         display: block;
     }
-}
-
-/** To fix footer at the bottom of the page
-    which is something most pages donesn't do
-    we flex display body and flex-end the footer
-*/
-body {
-    display: flex;
-    flex-direction: column;
 }
 
 .site-title, .site-title:visited, .site-title:active {
@@ -185,11 +194,14 @@ body {
 }
 
 .home-header {
-    .page-body {
-        display: flex;
-        justify-content: space-between;
-        padding: 72px 0 48px 0;
-    }
+}
+
+.home-header-content {
+    @include page-body;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 72px;
+    padding-bottom: 48px;
 
     @include tablet {
         display: block;
@@ -255,7 +267,7 @@ body {
 }
 
 .home-header-join-us-cta-btn {
-    display: block;
+    display: inline-block;
     position: relative;
     border-radius: 3px;
     background: $secondary-color;
@@ -268,6 +280,7 @@ body {
     cursor: pointer;
     text-transform: uppercase;
     text-decoration: none;
+    text-align: center;
 
     &:hover {
         background: $darken-secondary-color;
@@ -447,33 +460,47 @@ body {
     font-weight: 400;
 }
 
-.single-page-intro {
+.single-page-header {
     background: $primary-color;
     color: $light-color;
     padding: 48px 0;
 }
 
+.single-page-header-content {
+    @include page-body;
+}
+
+
 .single-page-title {
-    @include title;
+    display: inline-block;
     font-weight: 800;
     letter-spacing: -2px;
-    font-size: 38px;
+    font-size: 68px;
     border-bottom: solid 10px $secondary-color;
 }
 
 .single-page-description {
     padding-top: 24px;
     line-height: 1.7em;
+    font-weight: 600;
+    font-size: 18px;
 
     p {
         margin: 12px 0;
     }
+
+    em {
+        font-style: italic;
+        font-weight: 300;
+    }
 }
 
 .single-page-body {
+    @include page-body;
     padding-top: 32px;
     padding-bottom: 32px;
     flex-grow: 1;
+    font-size: 16px;
 
     p {
         @include pharagraph;
@@ -483,6 +510,18 @@ body {
     h2 {
         @include title;
         padding: 24px 0;
+        font-weight: 800;
+    }
+
+    h3 {
+        @include title;
+        padding: 24px 0;
+    }
+
+    h4 {
+        font-size: 22px;
+        font-weight: 800;
+        margin-top: 20px;
     }
 
     ul {
@@ -492,8 +531,21 @@ body {
     }
 
     ol {
-        list-style-type: lower-alpha;
-        line-height: 2em;
-        padding: 12px 0 12px 18px;
+        list-style-type: numeric;
+        line-height: 1.5em;
+        padding: 12px 0 12px 22px;
+
+        li {
+            padding: 8px 0;
+        }
+
+        ol {
+            list-style-type: lower-alpha;
+            padding: 8px 0 0 42px;
+
+            li {
+                padding: 3px 0;
+            }
+        }
     }
 }
