--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="column">
-        <h4 class="foot-title">{{ .Param "footer.soacials" }}</h4>
+        <h4 class="foot-title">{{ .Param "footer.socials" }}</h4>
         <h4 class="foot-title">{{ .Param "footer.languages" }}</h4>
         <ul class="page-foot-nav-ul">
           {{ $siteLanguages := site.Languages }}
