--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,10 +17,10 @@
             <a href="{{ ref . "register" }}">{{ .Param "navigation.register" }}</a>
           </li>
           <li>
-            <a href="#">{{ .Param "navigation.events" }}</a>
+            <a href="{{ ref . "events" }}">{{ .Param "navigation.events" }}</a>
           </li>
           <li>
-            <a href="#">{{ .Param "navigation.faq" }}</a>
+            <a href="{{ ref . "faq" }}">{{ .Param "navigation.faq" }}</a>
           </li>
         </ul>
       </div>
