--- a/layouts/register/single.html
+++ b/layouts/register/single.html
@@ -3,15 +3,17 @@
 {{ end }}
 
 {{ define "content" }}
-  <section class="single-page-header">
-    <div class="single-page-header-content">
-      <h1 class="single-page-title">{{ .Title }}</h1>
-      <div class="single-page-description">
+  <section class="register-page-header">
+    <div class="register-page-header-content">
+      <h1 class="register-page-title">{{ .Title }}</h1>
+      <div class="register-page-description">
         {{ .Content }}
       </div>
     </div>
   </section>
-  <main class="single-page-body">
-    Add form here
+  <main class="register-page-body">
+    <div class="register-page-content">
+      Add form here
+    </div>
   </main>
 {{ end }}
