--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -77,6 +77,63 @@ $ternary-color: #43C5FF;
     padding: 0 24px;
 }
 
+@mixin style-md {
+    p {
+        @include pharagraph;
+        margin: 20px 0;
+    }
+
+    strong {
+        font-weight: 700;
+    }
+
+    em {
+        font-style: italic;
+    }
+
+    h2 {
+        @include title;
+        padding: 24px 0;
+        font-weight: 800;
+    }
+
+    h3 {
+        @include title;
+        padding: 24px 0;
+    }
+
+    h4 {
+        font-size: 22px;
+        font-weight: 800;
+        margin-top: 20px;
+    }
+
+    ul {
+        list-style-type: square;
+        line-height: 2em;
+        padding: 12px 0 12px 52px;
+    }
+
+    ol {
+        list-style-type: numeric;
+        line-height: 1.5em;
+        padding: 12px 0 12px 22px;
+
+        li {
+            padding: 8px 0;
+        }
+
+        ol {
+            list-style-type: lower-alpha;
+            padding: 8px 0 0 42px;
+
+            li {
+                padding: 3px 0;
+            }
+        }
+    }
+}
+
 body, html {
     font-family: $main-font;
     height: 100%;
@@ -470,7 +527,6 @@ body {
     @include page-body;
 }
 
-
 .single-page-title {
     display: inline-block;
     font-weight: 800;
@@ -497,55 +553,129 @@ body {
 
 .single-page-body {
     @include page-body;
+    @include style-md;
     padding-top: 32px;
     padding-bottom: 32px;
     flex-grow: 1;
     font-size: 16px;
+}
+
+.register-page-header {
+    background: $secondary-color;
+    border-top: 6px solid $primary-color;
+    padding: 48px 0;
+}
+
+.register-page-header-content {
+    @include page-body;
+}
+
+.register-page-title {
+    display: inline-block;
+    font-weight: 800;
+    letter-spacing: -2px;
+    font-size: 68px;
+    border-bottom: solid 10px $dark-color;
+}
+
+.register-page-description {
+    padding-top: 24px;
+    line-height: 1.7em;
+    font-weight: 600;
+    font-size: 20px;
 
     p {
-        @include pharagraph;
-        margin: 20px 0;
+        margin: 12px 0;
     }
 
-    h2 {
-        @include title;
-        padding: 24px 0;
-        font-weight: 800;
+    em {
+        font-style: italic;
+        font-weight: 300;
     }
+}
 
-    h3 {
-        @include title;
-        padding: 24px 0;
-    }
+.register-page-body {
+    background: $primary-color;
+    min-height: 500px;
+    color: $light-color;
+    padding: 32px 0;
+    font-weight: 800;
+    flex-grow: 1;
+}
 
-    h4 {
-        font-size: 22px;
-        font-weight: 800;
-        margin-top: 20px;
-    }
+.register-page-content {
+    @include page-body;
+}
 
-    ul {
-        list-style-type: square;
-        line-height: 2em;
-        padding: 12px 0 12px 52px;
-    }
+.faq-header {
+    @include page-body;
+    padding-top: 72px;
+    padding-bottom: 48px;
+}
 
-    ol {
-        list-style-type: numeric;
-        line-height: 1.5em;
-        padding: 12px 0 12px 22px;
+.faq-title {
+    font-size: 120px;
+    font-weight: 300;
+    padding: 0;
+    font-weight: 800;
+    letter-spacing: -8px;;
+    margin: 0;
+}
 
-        li {
-            padding: 8px 0;
+.faq-sub-title {
+    margin-top: 24px;
+    font-weight: 800;
+    font-size: 32px;
+}
+
+.faq-meta-content {
+    @include style-md;
+}
+
+.faq-content {
+    flex-grow: 1;
+}
+
+.faq-item {
+    background: $primary-color;
+    color: $light-color;
+    padding: 24px 0;
+
+    &.second {
+        background: $secondary-color;
+        color: $dark-color;
+
+        .faq-question-text {
+            border-color: $dark-color;
         }
-
-        ol {
-            list-style-type: lower-alpha;
-            padding: 8px 0 0 42px;
-
-            li {
-                padding: 3px 0;
-            }
-        }
     }
+
+    &.third {
+        background: $light-color;
+        color: $dark-color;
+    }
+}
+
+.faq-question {
+    font-weight: 800;
+    font-size: 32px;
+    margin: 12px 0;
+}
+
+.faq-question-text {
+    @include page-body;
+    border-bottom: 4px solid $secondary-color;
+    letter-spacing: -1px;
+}
+
+.faq-question-link {
+    color: inherit;
+    text-decoration: none;
+}
+
+.faq-answer {
+    @include page-body;
+    @include style-md;
+    line-height: 1.6em;
+    font-size: 16px;
 }
