--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@ This might mean a bit more things need to be done to add new thing
 but it makes long term maintainanece much simpler.
 */
 @import "reset";
+@import "../../node_modules/leaflet/dist/leaflet";
 
 $main-font: 'Merriweather Sans', sans-serif;
 $secondary-font: 'Abril Fatface', cursive;
@@ -32,12 +33,12 @@ $ternary-color: #43C5FF;
 
 @mixin has-links {
     a, a:visited, a:active {
-        color: $ternary-color;
+        color: $primary-color;
     }
 
     a:hover {
         color: $light-color;
-        background: $ternary-color;
+        background: $primary-color;
     }
 }
 
@@ -64,10 +65,10 @@ $ternary-color: #43C5FF;
     letter-spacing: -1px;
 }
 
-@mixin tablet {
-    @media screen and (max-width: 1000px) {
-        @content;
-    }
+@mixin sub-title {
+    margin-top: 24px;
+    font-weight: 800;
+    font-size: 32px;
 }
 
 @mixin page-body {
@@ -77,7 +78,29 @@ $ternary-color: #43C5FF;
     padding: 0 24px;
 }
 
+@mixin cta-btn {
+    position: relative;
+    border-radius: 3px;
+    background: $secondary-color;
+    color: $dark-color;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 28px;
+    border: none;
+    padding: 24px 82px;
+    font-weight: 700;
+    cursor: pointer;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+
+    &:hover {
+        background: $darken-secondary-color;
+    }
+}
+
 @mixin style-md {
+    @include has-links;
+
     p {
         @include pharagraph;
         margin: 20px 0;
@@ -134,6 +157,13 @@ $ternary-color: #43C5FF;
     }
 }
 
+@mixin tablet {
+    @media screen and (max-width: 1000px) {
+        @content;
+    }
+}
+
+
 body, html {
     font-family: $main-font;
     height: 100%;
@@ -167,7 +197,7 @@ body {
     line-height: 72px;
 
     @include tablet {
-        display: block;
+        flex-direction: column;
     }
 }
 
@@ -261,7 +291,7 @@ body {
     padding-bottom: 48px;
 
     @include tablet {
-        display: block;
+        flex-direction: column;
     }
 }
 
@@ -324,24 +354,8 @@ body {
 }
 
 .home-header-join-us-cta-btn {
+    @include cta-btn;
     display: inline-block;
-    position: relative;
-    border-radius: 3px;
-    background: $secondary-color;
-    color: $dark-color;
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 28px;
-    border: none;
-    padding: 24px 82px;
-    font-weight: 700;
-    cursor: pointer;
-    text-transform: uppercase;
-    text-decoration: none;
-    text-align: center;
-
-    &:hover {
-        background: $darken-secondary-color;
-    }
 
     @include tablet {
         display: block;
@@ -365,7 +379,7 @@ body {
     gap: 84px;
 
     @include tablet {
-        display: block;
+        flex-direction: column;
     }
 }
 
@@ -423,17 +437,6 @@ body {
     margin: 68px 0 52px 0;
 }
 
-
-.event-item {
-    padding-bottom: 32px;
-    border-bottom: 2px solid $very-mutted-color;
-}
-
-.event-item:last-child {
-    border-bottom: none;
-}
-
-
 .home-events {
     padding: 48px 0;
 }
@@ -465,13 +468,30 @@ body {
     display: inline-block;
 }
 
+.home-event-link {
+    color: $dark-color;
+    text-decoration: none;
+}
+
 .home-event-description {
     @include pharagraph;
     font-size: 17px;
     line-height: 1.6em;
 }
 
+.home-event-item {
+    padding-bottom: 32px;
+    border-bottom: 2px solid $very-mutted-color;
+
+    &:last-child {
+        border-bottom: none;
+    }
+}
+
 .site-footer {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
     background: $more-mutted-color;
     padding: 32px 0;
     color: $light-color;
@@ -483,25 +503,41 @@ body {
     }
 }
 
+.site-after-footer {
+    background: $mutted-color;
+    padding: 24px 0;
+}
+
+.site-software-note {
+    @include page-body;
+    font-size: 14px;
+    color: $very-mutted-color;
+    line-height: 1.5em;
+    text-align: center;
+
+    a {
+        color: $ternary-color;
+    }
+}
+
 .column {
     flex-grow: 1;
     flex-shrink: 0;
 }
 
-.event-date {
-    background: $mutted-color;
-    color: $secondary-color;
+.home-event-date {
+    background: $primary-color;
+    color: $light-color;
     font-weight: 600;
     padding: 0 4px;
     border-radius: 2px;
 }
 
-.event-place {
+.home-event-place {
     font-weight: 600;
     font-style: italic;
     color: $mutted-color;
 }
-
 
 .foot-title {
     font-size: 20px;
@@ -520,7 +556,8 @@ body {
 .single-page-header {
     background: $primary-color;
     color: $light-color;
-    padding: 48px 0;
+    padding-top: 72px;
+    padding-bottom: 32px;
 }
 
 .single-page-header-content {
@@ -563,7 +600,8 @@ body {
 .register-page-header {
     background: $secondary-color;
     border-top: 6px solid $primary-color;
-    padding: 48px 0;
+    padding-top: 72px;
+    padding-bottom: 32px;
 }
 
 .register-page-header-content {
@@ -623,9 +661,7 @@ body {
 }
 
 .faq-sub-title {
-    margin-top: 24px;
-    font-weight: 800;
-    font-size: 32px;
+    @include sub-title;
 }
 
 .faq-meta-content {
@@ -664,7 +700,7 @@ body {
 
 .faq-question-text {
     @include page-body;
-    border-bottom: 4px solid $secondary-color;
+    border-bottom: 6px solid $secondary-color;
     letter-spacing: -1px;
 }
 
@@ -678,4 +714,251 @@ body {
     @include style-md;
     line-height: 1.6em;
     font-size: 16px;
+}
+
+.events-header {
+    border-bottom: 6px solid $primary-color;
+    border-top: 6px solid $primary-color;
+    background: $very-mutted-color;
+    margin-bottom: 32px;
+}
+
+.events-header-content {
+    @include page-body;
+    padding-top: 72px;
+    padding-bottom: 32px;
+}
+
+.events-title {
+    @include section-title;
+    border-bottom: solid 10px $primary-color;
+    font-size: 68px;
+}
+
+.events-sub-title {
+    font-weight: 400;
+    font-size: 27px;
+    color: $mutted-color;
+    margin-top: 24px;
+}
+
+.events-meta-content {
+    @include style-md;
+}
+
+.events-content {
+    @include page-body;
+    flex-grow: 1;
+}
+
+.events-event-title {
+    margin: 64px 0 18px 0;
+    font-weight: 600;
+    font-size: 32px;
+    display: inline-block;
+}
+
+.events-event-link {
+    color: $dark-color;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.events-event-description {
+    @include pharagraph;
+    font-size: 17px;
+    line-height: 1.6em;
+}
+
+.events-event-item {
+    padding-bottom: 32px;
+    border-bottom: 2px solid $very-mutted-color;
+
+    &:last-child {
+        border-bottom: none;
+    }
+}
+
+.events-event-date {
+    background: $primary-color;
+    color: $light-color;
+    font-weight: 600;
+    padding: 0 4px;
+    border-radius: 2px;
+}
+
+.events-event-place {
+    font-weight: 600;
+    font-style: italic;
+    color: $mutted-color;
+}
+
+.event-detail-header-content {
+    @include page-body;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 72px;
+    padding-bottom: 32px;
+
+    @include tablet {
+        flex-direction: column;
+        gap: 24px;
+    }
+}
+
+.event-detail-header-left {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    align-items: flex-start;
+
+    @include tablet {
+        align-items: stretch;
+    }
+}
+
+.event-detail-sub-title {
+    font-weight: 400;
+    font-size: 27px;
+    color: $mutted-color;
+}
+
+.event-detail-header-register-cta {
+    @include cta-btn;
+    padding: 12px 48px;
+}
+
+.event-detail-header-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 6px;
+
+    @include tablet {
+        align-items: flex-start;
+    }
+}
+
+.event-detail-header-date {
+    font-weight: 800;
+    font-size: 28px;
+    text-align: right;
+}
+
+.event-detail-header-place {
+    font-size: 32px;
+    font-weight: 300;
+    color: $primary-color;
+    text-align: right;
+}
+
+.event-detail-page-body {
+    @include page-body;
+    display: flex;
+    gap: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    flex-grow: 1;
+    font-size: 16px;
+
+    @include tablet {
+        flex-direction: column;
+    }
+}
+
+.event-detail-content {
+    @include style-md;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.event-detail-info {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 400px;
+    flex-shrink: 0;
+    flex-grow: 0;
+
+    @include tablet {
+        width: auto;
+    }
+}
+
+.event-detail-info-title {
+    font-size: 38px;
+    font-weight: 800;
+    letter-spacing: -2px;
+    margin-bottom: -18px;
+    color: $very-mutted-color;
+}
+
+.event-detail-info-table {
+    @include has-links;
+    width: 100%;
+    color: $mutted-color;
+
+    td {
+        padding: 4px 0;
+        font-weight: 600;
+
+        &:last-child {
+            width: 65%;
+            font-weight: 400;
+        }
+    }
+}
+
+.event-detail-register-cta {
+    @include cta-btn;
+}
+
+.event-detail-info-share {
+    @include has-links;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+
+    a {
+        width: auto;
+        padding: 2px 0;
+    }
+}
+
+.event-detail-info-map {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.event-detail-info-coords {
+    color: $more-mutted-color;
+    font-size: 14px;
+    line-height: 1.3em;
+}
+
+.event-detail-info-map-links {
+    @include has-links;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+}
+
+#map {
+    height: 300px;
+}
+
+.map-marker-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-bottom: 6px;
+}
+
+.image-preload {
+    display: none;
 }
