--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -59,3 +59,15 @@
     </div>
   </main>
 </footer>
+
+<section class="site-after-footer">
+  <div class="site-software-note">
+    This website was made possible by amazing <a target="_blank" href="https://en.wikipedia.org/wiki/Free_and_open-source_software">FOSS</a> projects including
+    <a target="_blank" href="//gohugo.io">Hugo</a>
+    and
+    <a target="_blank" href="//nixos.org">NixOS</a>.
+    <br/>
+    Source code is <a taget="_blank" href="//github.com/ictunion/main-website">released</a> under <a target="_blank" href="//www.gnu.org/licenses/agpl-3.0.html">AGPL license</a>.<br>
+    Content is provided under <a target="_blank" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International</a>.
+  </div>
+</section>
