--- a/layouts/partials/home-header.html
+++ b/layouts/partials/home-header.html
@@ -11,7 +11,9 @@
     <div class="home-header-join-us-cta">
       <a href="{{ ref . "register" }}" class="home-header-join-us-cta-btn">{{ .Param "joinCta" }}</a>
       <p class="home-header-join-us-text">
-        <a href="{{ ref . "register" }}">{{ i18n "become member" }}</a> {{ i18n "or join some of our" }} <a href="#">{{ i18n "events" }}</a>.
+        <a href="{{ ref . "register" }}">{{ i18n "become member" }}</a>
+        {{ i18n "or join some of our" }}
+        <a href="{{ ref . "events" }}">{{ i18n "events" }}</a>.
       </p>
     </div>
   </div>
