--- a/layouts/register/single.html
+++ b/layouts/register/single.html
@@ -1,5 +1,5 @@
 {{ define "title" }}
-  {{ .Param "title" }} | {{ .Site.Title }} {{ .Param "subTitle" }}
+  {{ .Param "title" }} | {{ .Site.Title }} {{ .Site.Param "subTitle" }}
 {{ end }}
 
 {{ define "content" }}
