--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -570,21 +570,25 @@ body {
 
 .single-page-header-content {
     @include page-body;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .single-page-title {
-    display: inline-block;
     font-weight: 800;
     letter-spacing: -2px;
     font-size: 68px;
     border-bottom: solid 10px $secondary-color;
+    align-self: flex-start;
+    justify-self: flex-start;
 }
 
 .single-page-description {
-    padding-top: 24px;
     line-height: 1.7em;
     font-weight: 600;
     font-size: 18px;
+    padding-top: 16px;
 
     p {
         margin: 12px 0;
@@ -638,6 +642,15 @@ body {
         font-style: italic;
         font-weight: 300;
     }
+}
+
+.single-page-header-download {
+    color: rgba($light-color, 0.7);
+    font-size: 16px;
+}
+
+.single-page-header-download-link {
+    color: $secondary-color;
 }
 
 .register-page-body {
